--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,8 @@ $text-primary: #101828;
 $text-secondary: #344054;
 $text-placeHolder: #667085;
 $bg-primary: #ffffff;
+$bg-active: #f9fafb;
+$bg-quaterny: #eaecf0;
 $text-teriary: #475467;
 $border-brand: #d6bbfb;
 $border-primary: #d0d5dd;
@@ -10,6 +12,8 @@ $fg-quanry: #98a2b3;
 
 @import "./components/selectInput.scss";
 @import "./components/tag.scss";
+@import "./components/optionsList.scss";
+@import "./app.scss";
 
 *,
 *::before,
@@ -20,4 +24,8 @@ $fg-quanry: #98a2b3;
 body {
   margin: 0;
   padding: 0;
+}
+
+.hidden {
+  display: none;
 }
