--- a/src/style/components/tag.scss
+++ b/src/style/components/tag.scss
@@ -4,6 +4,9 @@
   padding: 2px 4px;
   border-radius: 6px;
   align-items: center;
+  width: 200px;
+  justify-content: space-between;
+
   cursor: pointer;
   &:not(:last-child) {
     margin-right: 6px;
@@ -12,25 +15,30 @@
     margin-right: 8px;
   }
 
-  .img-wrapper {
-    width: 24px;
-    height: 24px;
-    border-radius: 9999px;
-    border: 1px solid $border-primary;
-    overflow: hidden;
-    margin-right: 2px;
-    img {
-      width: 100%;
-      height: 100%;
+  .content {
+    display: flex;
+    align-items: center;
+    .img-wrapper {
+      width: 24px;
+      height: 24px;
+      border-radius: 9999px;
+      border: 1px solid $border-primary;
+      overflow: hidden;
+      margin-right: 2px;
+      min-width: 24px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
-  }
-  .text {
-    color: $text-secondary;
-    word-break: break-all;
-    word-wrap: none;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    line-height: 20px;
+    .text {
+      color: $text-secondary;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      line-height: 20px;
+      max-width: 175px;
+    }
   }
   .back-button {
     width: 12px;
@@ -39,6 +47,7 @@
     align-items: center;
     justify-content: center;
     margin-left: 5px;
+    min-width: 12px;
     img {
       width: 100%;
       height: 100%;
