--- a/src/style/components/selectInput.scss
+++ b/src/style/components/selectInput.scss
@@ -65,6 +65,11 @@
           width: 100%;
           height: 100%;
         }
+        &.active {
+          img {
+            transform: rotate(180deg);
+          }
+        }
       }
     }
   }
