--- a/src/style/components/selectInput.scss
+++ b/src/style/components/selectInput.scss
@@ -59,7 +59,7 @@
       }
       .show-icon {
         margin-left: 8px;
-        width: 20px;
+        min-width: 20px;
         height: 20px;
         img {
           width: 100%;
