finish select component

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,28 +1,47 @@
-.render-option {
-  height: 44px;
-  color: $text-primary;
-  padding: 10px;
-  border-radius: 6px;
-  margin-bottom: 3px;
-  display: flex;
-  align-items: center;
-  display: flex;
-  align-items: center;
-  .option-image {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
-    overflow: hidden;
-    border-radius: 99999px;
-    img {
-      width: 100%;
-      height: 100%;
-    }
+.app-example-wrapper {
+  padding: 0px 200px;
+  h1 {
+    text-align: center;
   }
-  &.active {
-    background-color: $bg-active;
+  .row {
+    margin-bottom: 30px;
+  }
+  .render-option {
+    height: 44px;
+    color: $text-primary;
+    padding: 10px;
+    border-radius: 6px;
+    margin-bottom: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .option-content {
+      display: flex;
+      align-items: center;
+      .option-image {
+        width: 24px;
+        height: 24px;
+        margin-right: 8px;
+        overflow: hidden;
+        border-radius: 99999px;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      span {
+        color: $text-teriary;
+      }
+    }
     .active-icon {
-      display: block;
+      display: none;
+    }
+
+    &.active {
+      background-color: $bg-active;
+      .active-icon {
+        display: block;
+      }
     }
   }
 }
