--- a/src/style/components/tag.scss
+++ b/src/style/components/tag.scss
@@ -35,8 +35,11 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
-      width: 150px;
+      width: 140px;
       line-height: 20px;
+      @media only screen and (max-width: 600px) {
+        width: 100px;
+      }
     }
   }
   .back-button {
